Fix mobile layout issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -117,7 +117,7 @@ h1 {
 
 @media all and (max-width: 660px) {
   h1 {
-    font-size: 0em;
+    font-size: 1.5em;
   }
 }
 
@@ -294,7 +294,7 @@ ul.apps {
   }
   .appIcon {
     box-sizing: border-box;
-    border-radius: 20px;
+    border-radius: 1em;
     /*height: 100px;
     width: 100px;
     */
